--- a/maps_main.ui
+++ b/maps_main.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>650</width>
-    <height>541</height>
+    <height>553</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,9 +17,9 @@
    <widget class="QLineEdit" name="line_search">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>20</y>
-      <width>281</width>
+      <x>10</x>
+      <y>60</y>
+      <width>221</width>
       <height>20</height>
      </rect>
     </property>
@@ -33,8 +33,8 @@
    <widget class="QPushButton" name="btn_search">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>20</y>
+      <x>240</x>
+      <y>60</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -55,7 +55,7 @@
    <widget class="QPushButton" name="btn_reset">
     <property name="geometry">
      <rect>
-      <x>440</x>
+      <x>143</x>
       <y>20</y>
       <width>171</width>
       <height>23</height>
@@ -66,6 +66,32 @@
     </property>
     <property name="text">
      <string>Сброс поискового результата</string>
+    </property>
+   </widget>
+   <widget class="QPlainTextEdit" name="adress">
+    <property name="geometry">
+     <rect>
+      <x>350</x>
+      <y>30</y>
+      <width>251</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>350</x>
+      <y>10</y>
+      <width>47</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Адресс</string>
     </property>
    </widget>
   </widget>
